composer autoload psr-4 to psr-0

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,5 +37,6 @@ before_script:
 
 # Run tests
 script:
+  - composer validate --strict --no-check-lock
   # Run PhpUnit
   - vendor/bin/phpunit --bootstrap vendor/autoload.php tests
