--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mohsinadeel/wpcoreintegrity",
+  "name": "mohsinadeel/wp-core-integrity",
   "description": "A plugin to scan WordPress core directories to check the files integrity",
   "type": "project",
   "require": {
@@ -20,7 +20,7 @@
   },
   "autoload": {
     "psr-4": {
-      "mohsinadeel\\wpcoreintegrity\\": "src/"
+      "Inceptionsol\\Coreintegrity\\": "src/"
     }
   },
   "autoload-dev": {
