--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ before_script:
 # Run tests
 script:
   - composer validate --strict --no-check-lock
+  - composer dump-autoload -o
   # Run PhpUnit
   #- vendor/bin/phpunit --bootstrap vendor/autoload.php tests
   - vendor/bin/phpunit
